--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="Style2.css">
 </head>
 <body>
-<h1> Rebecca Rocks </h1>
+<h1> Rebecca Is the BEST! </h1>
 <h2>
 <img width="300px" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/12592507_10206302269144107_5662751466757479989_n.jpg?oh=7f3ddcafeadb57cfd27cbfdf2e79778b&oe=5861A09A">
 </h2>
