--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
     <li>Movies.</li>
     <li>Travel.</li>
     <li>People.</li>
-  <p> A completely accurate not at all edited description of life on Greygriars </p>  
+  <p> A completely accurate not at all edited description of life on Greyfriars </p>  
