--- a/friends.html
+++ b/friends.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title> 7D Food </title>
+	<title> 7D Friends </title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="friends.css">
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
@@ -12,6 +12,21 @@
     <li id="Friends">Friends.</li>
     <li>Far Away.</li>
     </ul>
+<div class="imagerep">
+  <img src="images/Laura.jpg">
+  <p class="imagetext">
+    Hometown
+  </p>
+</div>
+<div class="imagerep">
+  <img src="images/Kristen.jpg">
+  <p class="imagetext">
+    Year
+  </p>
+</div>
+
+<img src="images/Georgia.jpg">
+
   </body>
 
   </html>  
