--- a/friends.html
+++ b/friends.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="friends.css">
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
+  <link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
 </head>
 <body>
 <h1> 7D Blog </h1>
@@ -12,21 +13,32 @@
     <li id="Friends">Friends.</li>
     <li>Far Away.</li>
     </ul>
-<div class="imagerep">
+<div class="row">    
+<div class="col-sm-4" class="imagerep">
   <img src="images/Laura.jpg">
   <p class="imagetext">
     Hometown
   </p>
 </div>
-<div class="imagerep">
+<div class="col-sm-4" class="imagerep">
   <img src="images/Kristen.jpg">
   <p class="imagetext">
     Year
   </p>
+  </div>
+<img class="col-sm-4" src="images/Georgia.jpg">
+<p class="imagetext">
+    Year
 </div>
 
-<img src="images/Georgia.jpg">
-
+<div class="row">    
+<div class="col-sm-4" class="imagerep">
+  <img src="images/Rosie.jpg">
+</div>
+  <div class="col-sm-4" class="imagerep">
+  <img src="images/Imogen.jpg">
+</div>
+  </div>
   </body>
 
   </html>  
