Adding fun facts about friends

--- a/friends.html
+++ b/friends.html
@@ -17,27 +17,63 @@
 <div class="col-sm-4" class="imagerep">
   <img src="images/Laura.jpg">
   <p class="imagetext">
-    Hometown
+    "Happiness can be found, even in the darkest of times, if one only remembers to turn on the light"
+    Hometown: San Francisco
+    Studying: International Relations and Management, 4th year
+    Favorite 7D Activity: Going to sleep after a filling meal with friends
+    Spirit Cocktail: Mimosa
+    Dream Date: Going to a cozy cafe, with lots of cake, that I've never heard of before. 
+    Dietary Requirements: I hate fish. They are gross. 
+
   </p>
 </div>
 <div class="col-sm-4" class="imagerep">
   <img src="images/Kristen.jpg">
   <p class="imagetext">
-    Year
+    "There's a million things I haven't done"
+    Hometown: California
+    Studying: International Relations and Management, 4th year
+    Favorite 7D Activity: eating
+    Spirit Cocktail: Betty's Tea Party
+    Dream Date: Something with food and good chat. Oh and maybe some sort of physical contact, so I actually know it's a date...
+    Dietary Requirements: glutenfreie
   </p>
   </div>
 <img class="col-sm-4" src="images/Georgia.jpg">
 <p class="imagetext">
-    Year
+    "If you judge a fish by it's ability to climb a tree, it will spend the rest of it's life thinking it is stupid"
+    Hometown: Suffolk (The Armpit of England)
+    Studying: French and IR, 4th Year
+    Favorite 7D Activity: Mainly snuggles. Also food and projector movies 
+    Spirit Cocktail: Something fruity (cheeky...)
+    Dream Date: One where the guy shows up. GODDAMN IT.
+    Dietary Requirements: I eat all things. I am a student. 
     </p>
 </div>
 
 <div class="row">    
 <div class="col-sm-4" class="imagerep">
   <img src="images/Rosie.jpg">
+  <p class="imagetext">
+    "Be kind whenever possible. It is always possible."
+    Hometown: Berkshire
+    Studying: Geography, 4th Year
+    Favorite 7D Activity: Drinking tea
+    Spirit Cocktail: White Russian
+    Dream Date: Surprise me
+    Dietary Requirements: Vegetarian
+    </p>
 </div>
   <div class="col-sm-4" class="imagerep">
   <img src="images/Imogen.jpg">
+  <p class="imagetext">
+    Hometown: 
+    Studying: 
+    Favorite 7D Activity: 
+    Spirit Cocktail:
+    Dream Date: 
+    Dietary Requirements: 
+    </p>
 </div>
   </div>
   </body>
