Links, and recipe form
added in recipe form, tried to bootstap column the food page, created
links between pages  (though it keeps links contect to faraway for some
reason, will fix.)

--- a/faraway.html
+++ b/faraway.html
@@ -6,11 +6,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
 </head>
 <body>
-<h1> 7D Blog </h1>
+<h1><a href='index.html'>7D Blog </h1>
 <ul class='topnav'>
-    <li>Food.</li>
-    <li>Friends.</li>
-    <li id="faraway">Far Away.</li>
+    <li><a href='food.html'>Food.</li>
+    <li><a href='friends.html'>Friends.</li>
+    <li id="faraway"><a href='faraway.html'>Far Away.</li>
     </ul>
   </body>
 
