--- a/friends.html
+++ b/friends.html
@@ -7,11 +7,11 @@
   <link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
 </head>
 <body>
-<h1> 7D Blog </h1>
+<h1><a href='index.html'>7D Blog </h1>
 <ul class='topnav'>
-    <li>Food.</li>
-    <li id="Friends">Friends.</li>
-    <li>Far Away.</li>
+    <li><a href='food.html'>Food.</li>
+    <li id="Friends"><a href='friends.html'>Friends.</li>
+    <li><a href='faraway.html'>Far Away.</li>
     </ul>
 <div class="row">    
 <div class="col-sm-4" class="imagerep">
