--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-<h1> 7D Blog </h1>
+<h1><a href='index.html'>7D Blog </h1>
 <ul class='topnav'>
-    <li>Food.</li>
-    <li>Friends.</li>
-    <li>Far Away.</li>
+    <li><a href='food.html'>Food.</li>
+    <li><a href='friends.html'>Friends.</li>
+    <li><a href='faraway.html'>Far Away.</li>
     </ul>
 
  <img width="400px" height="300px" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/14322774_10210602320353438_8109989242671504453_n.jpg?oh=dd1b9c9fbf14f7c8e95bd61a8a862114&oe=588E4705" class="TextWrapRight">
