--- a/friends.html
+++ b/friends.html
@@ -24,9 +24,37 @@
     Spirit Cocktail: Mimosa
     Dream Date: Going to a cozy cafe, with lots of cake, that I've never heard of before. 
     Dietary Requirements: I hate fish. They are gross. 
-
   </p>
+  </div>
+ 
+<div class="col-sm-4" class="imagerep">
+  <img src="images/Nat.jpg" >
+  <p class="imagetext">
+    #yolo
+    Hometown: Los Angeles 
+    Studying: Modern History, 4th year
+    Favorite 7D Activity: Chatting while I'm cooking 
+    Dream Date: Going to a cozy cafe, with lots of cake, that I've never heard of before. 
+    Dietary Requirements: I hate fish. They are gross. 
+  </p>
+  </div>
+
+  <div class="col-sm-4" class="imagerep">
+  <img src="images/Sam.jpg" >
+  <p class="imagetext">
+    Life moves pretty fast.  If you don't stop to look around once in a while you could miss it.
+    Hometown: Washington DC // New Canaan, CT
+    Studying: International Relations, 4th Year
+    Favorite 7D Activity: Sleeping/Eating/Bantering
+    Spirit Cocktail: Virgin Espresso Martini//The Physician (ketel one vodka, st germain, mint & raspberries)
+    Dream Date: Hahahahaha that's funny, dating doesn't happen in St Andrews
+    Dietary Requirements: GLUTEN FREE AND PROUD, OK.
+  </p>
+  </div>
+
 </div>
+
+<div class="row">  
 <div class="col-sm-4" class="imagerep">
   <img src="images/Kristen.jpg">
   <p class="imagetext">
@@ -35,11 +63,13 @@
     Studying: International Relations and Management, 4th year
     Favorite 7D Activity: eating
     Spirit Cocktail: Betty's Tea Party
-    Dream Date: Something with food and good chat. Oh and maybe some sort of physical contact, so I actually know it's a date...
-    Dietary Requirements: glutenfreie
+    Dream Date: Skiing, not backcountry. 
+    Dietary Requirements: Gluten, meat, and dairy. Preferably combined. 
   </p>
   </div>
-<img class="col-sm-4" src="images/Georgia.jpg">
+
+<div class="col-sm-4" class="imagerep"> 
+<img  src="images/Georgia.jpg" >
 <p class="imagetext">
     "If you judge a fish by it's ability to climb a tree, it will spend the rest of it's life thinking it is stupid"
     Hometown: Suffolk (The Armpit of England)
@@ -50,8 +80,7 @@
     Dietary Requirements: I eat all things. I am a student. 
     </p>
 </div>
-
-<div class="row">    
+   
 <div class="col-sm-4" class="imagerep">
   <img src="images/Rosie.jpg">
   <p class="imagetext">
@@ -64,6 +93,7 @@
     Dietary Requirements: Vegetarian
     </p>
 </div>
+<div class="row">  
   <div class="col-sm-4" class="imagerep">
   <img src="images/Imogen.jpg">
   <p class="imagetext">
