fixed links, added bootstrap all pages, nav bar using bootstrap
Did lots of things, main thing for the other pages was to make it link
to the main CSS. Picked colours at random but we can change it later

--- a/faraway.html
+++ b/faraway.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <head>
 	<title> 7D Far Away </title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
+  <link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="faraway.css">
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
 </head>
 <body>
-<h1><a href='index.html'>7D Blog </h1>
+<h1><a href='index.html' class='sitelink'>7D Blog</a></h1>
 <ul class='topnav'>
-    <li><a href='food.html'>Food.</li>
-    <li><a href='friends.html'>Friends.</li>
-    <li id="faraway"><a href='faraway.html'>Far Away.</li>
-    </ul>
+<div class='container'>
+    <div class='col-sm-4'><li id="Food"> <a href='food.html' class='sitelink'>Food.</a></li></div>
+    <div class='col-sm-4'><li> <a href='friends.html' class='sitelink'>Friends.</a></li></div>
+    <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'>Far Away.</a></li></div>
+</div>
+</ul>
   </body>
-
   </html>  
