--- a/food.html
+++ b/food.html
@@ -7,45 +7,42 @@
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
 </head>
 <body>
-<h1> <a href='index.html'>7D Blog</h1>
+<h1> <a href='index.html' class='sitelink'>7D Blog</a></h1>
+
 <ul class='topnav'>
-    <li id="Food"> <a href='food.html'>Food.</li>
-    <li> <a href='friends.html'>Friends.</li>
-    <li> <a href='faraway.html'>Far Away.</li>
-</ul>
- <p> 
 <div class='container'>
+    <div class='col-sm-4'><li id="Food"> <a href='food.html' class='sitelink'>Food.</a></li></div>
+    <div class='col-sm-4'><li> <a href='friends.html' class='sitelink'>Friends.</a></li></div>
+    <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'>Far Away.</a></li></div>
+</div>
+</ul>
+
+<div class='container'> 
 	<div class='row'>
-	<div class='col-sm-8'>
+	<div class='col-sm-5'>
 		<h2>Sausage and Fennel Pasta</h2>
 		<p>This was a great winter warmer from Jamie Oliver</p>
 	</div>
-	</div>
-	<div class='row'>
 	<div class='col-sm-4'>
 		<img src='http://www.johnsonville.com/recipe/zesty-italian-sausage-pasta/image/zestyItalianSausagePasta.jpg' width="200px" height="100px">
 	</div>
+	<div class='col-sm-3'> 
+ <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScbzwjgK2Imc9PFhzB6_L_Kec13wXZrbAQMEUSboO1Cvx8NQQ/viewform?embedded=true" width="300" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+	</div>
+	</div>  
+
+<div class='container'> 
+	<div class='row'>
+	<div class='col-sm-5'>
+		<h2>Pesto Chicken and Veg</h2>
+		<p>A last minute throw together meal, inspired from what was in the 7D fridge and an Aldi run.</p>
+	</div>
+	<div class='col-sm-4'>
+		<img src='IMG_0670.jpg' width="200px" height="100px">
+	</div>
+	<div class='col-sm-3'> 
 	</div>
 </div>
-<form class="form-horizontal">
-  <div class="form-group">
-    <label for="name" class="col-sm-2 control-label">Name</label>
-    <div class="col-sm-10">
-      <input type="name" class="form-control" id="inputname" placeholder="Name">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="recipe" class="col-sm-2 control-label">Recipe</label>
-    <div class="col-sm-10">
-      <input type="recipe" class="form-control" id="inputrecipe" placeholder="Recipe">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Submit</button>
-    </div>
-  </div>
- </p> 
-</form>   
+
 </body>
 </html>
