--- a/friends.html
+++ b/friends.html
@@ -7,12 +7,16 @@
   <link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
 </head>
 <body>
-<h1><a href='index.html'>7D Blog </h1>
+<h1><a href='index.html' class='sitelink'>7D Blog</a></h1>
+
 <ul class='topnav'>
-    <li><a href='food.html'>Food.</li>
-    <li id="Friends"><a href='friends.html'>Friends.</li>
-    <li><a href='faraway.html'>Far Away.</li>
-    </ul>
+<div class='container'>
+    <div class='col-sm-4'><li id="Food"> <a href='food.html' class='sitelink'>Food.</a></li></div>
+    <div class='col-sm-4'><li> <a href='friends.html' class='sitelink'>Friends.</a></li></div>
+    <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'>Far Away.</a></li></div>
+</div>
+</ul>
+
 <div class="row">    
 <div class="col-sm-4" class="imagerep">
   <img src="images/Laura.jpg">
