names on images

--- a/friends.html
+++ b/friends.html
@@ -16,6 +16,7 @@
 <div class="row">    
 <div class="col-sm-4" class="imagerep">
   <img src="images/Laura.jpg">
+  <h2>Laura</h2>
   <p class="imagetext">
     "Happiness can be found, even in the darkest of times, if one only remembers to turn on the light"
     Hometown: San Francisco
@@ -29,6 +30,7 @@
  
 <div class="col-sm-4" class="imagerep">
   <img src="images/Nat.jpg" >
+  <h2>Nathalie</h2>
   <p class="imagetext">
     #yolo
     Hometown: Los Angeles 
@@ -41,6 +43,7 @@
 
   <div class="col-sm-4" class="imagerep">
   <img src="images/Sam.jpg" >
+  <h2>Samantha</h2>
   <p class="imagetext">
     Life moves pretty fast.  If you don't stop to look around once in a while you could miss it.
     Hometown: Washington DC // New Canaan, CT
@@ -57,6 +60,7 @@
 <div class="row">  
 <div class="col-sm-4" class="imagerep">
   <img src="images/Kristen.jpg">
+  <h2>Kristen</h2>
   <p class="imagetext">
     "There's a million things I haven't done"
     Hometown: California
@@ -70,6 +74,7 @@
 
 <div class="col-sm-4" class="imagerep"> 
 <img  src="images/Georgia.jpg" >
+<h2>Georgia</h2>
 <p class="imagetext">
     "If you judge a fish by it's ability to climb a tree, it will spend the rest of it's life thinking it is stupid"
     Hometown: Suffolk (The Armpit of England)
@@ -83,6 +88,7 @@
    
 <div class="col-sm-4" class="imagerep">
   <img src="images/Rosie.jpg">
+  <h2>Rosie</h2>
   <p class="imagetext">
     "Be kind whenever possible. It is always possible."
     Hometown: Berkshire
@@ -93,9 +99,12 @@
     Dietary Requirements: Vegetarian
     </p>
 </div>
+</div>
+
 <div class="row">  
   <div class="col-sm-4" class="imagerep">
   <img src="images/Imogen.jpg">
+  <h2>Imogen</h2>
   <p class="imagetext">
     Hometown: 
     Studying: 
