nag bar on far away

--- a/faraway.html
+++ b/faraway.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="faraway.css">
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
 <h1><a href='index.html' class='sitelink'>7D Blog</a></h1>
@@ -15,5 +16,71 @@
     <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'>Far Away.</a></li></div>
 </div>
 </ul>
+
+   <nav>
+      <div class=nav>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="sidenav">
+            <li class="snav"><a href="#Edinburgh">Edinburgh</a></li>
+            <li class="snav"><a href="#Skye">Isle of Skye</a></li>
+            <li class="snav"><a href="#Iceland">Iceland</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+<div id="Edinburgh">
+  
+  <h2>Edinburgh</h2>
+  <div class="row">
+    <div class="col-sm-10">
+       <img src="images/Edinburghcafe.jpg" height="300px" class="TextWrapRight">
+  <p>
+    Rebecca and I decided to take a day trip to Edinburgh. Some times a fourth year just has to get out of St. Andrews, even if they can't flee the country, they can at least leave Fife for a few hours. We pushed off early one Friday morning for a day out, but both being bogged down by work opted to spend the majority of the day in a cafe. We went to Checkpoint on Bistro Place, a cute trendy place filled with Edinburgh students sipping on coffees, having celebratory lunches and a few unlucky souls like us trying to beat the deadline stress! We worked throughout the morning, stopping for a fabulous lunch. We split the cayennne barbeque pulled pork and chilli slaw Checkpoint sub which did not disappoint! 
+  </p>
+  <img src="images/voting.jpg"  height="300px" class="TextWrapLeft">
+  <p>
+    After lunch we decided enough was enough, no more studying for us! We first took care of my civic duty, mailing in my ballot for what turned out to be a rather frightful presidential election. All smiles, as you can see in the picture, until the results were released. Lucky this trip was a blissful time as the Trump take over was yet to be a reality. After our stint at the post office we went on a mission to find halloween costumes! Rebecca needed gloves to be Princess peach and I need cop hats for sinners. Both of us were very successful in our hunt which led us to many rummage stores and costume shops. Ultimately the day ended at our second coffee shop as the wifi refused to cooperate and we both nearly fell asleep despite copious amounts of coffee and tea. All in all I would highly reccommend a wee trip to our nation's capital as the perfect day trip that can combine productivity, fun and new food. 
+    </p>
+    <p>
+    -Laura
+  </p>
+  
+    </div>
+  </div>
+ 
+<div id="Skye">
+  <h2>Isle of Skye</h2>
+<div class="row">
+    <div class="col-sm-10">
+
+  <img src="images/skye.jpg" height="300px" class="TextWrapLeft">
+  <p>
+    Before our final year started Rebecca and I found it was high time we visited the beautiful Isle of Skye. Tjis was no simple feat as we decided to travel the 500 mile round trip jounrey by e-car. Feeling very environmentally friendly, we lapsed up the maginificence of Scotland bit by bit. HAving to stop every 90 miles encouraged us to explore towns we otherwise would not have such as Pitlochary, where we saw a massive dam, Fort William where we met nice fellow e-car drivers (though they had Teslas #dreamz). We also stopped off at the Harry Potter bridge,a s pictured! Almost hopped aboard the Hogwarts Express but the thought of seven more years of school, even wizard school, terrified us enough to continue our muggle lives. 
+  </p>
+  <img src="images/skyefall.jpg" height="300px" class="TextWrapRight">
+  <p>
+    Skye itself was everything it is chalked up to be. The drive in (after getting off the ferry) proved very dangerous as the landscape and immaculate sunset were very distracting! We stayed in Portree, the largest town on the island. We visited the Fairy pools, hiked the Quirang, and visited Dunvegan castle. 
+  </p>
+</div>  
+</div>
+
+<div id="Iceland">
+<div class="row">
+    <div class="col-sm-10">
+  <h2>Iceland</h2>
+  <img src="images/Iceland1.jpg" height="300px" class="TextWrapLeft">
+  <p>
+    Rebecca and I decided to take a day trip to Edinburgh. 
+  </p>
+</div>    
+
   </body>
   </html>  
