--- a/food.html
+++ b/food.html
@@ -38,7 +38,7 @@
 		<p>A last minute throw together meal, inspired from what was in the 7D fridge and an Aldi run.</p>
 	</div>
 	<div class='col-sm-4'>
-		<img src='IMG_0670.jpg' width="200px" height="100px">
+		<img src='images/IMG_0670.jpg' width="200px" height="100px">
 	</div>
 	<div class='col-sm-3'> 
 	</div>
