--- a/faraway.html
+++ b/faraway.html
@@ -35,6 +35,7 @@
             <li class="snav"><a href="#Edinburgh">Edinburgh</a></li>
             <li class="snav"><a href="#Skye">Isle of Skye</a></li>
             <li class="snav"><a href="#Iceland">Iceland</a></li>
+            <li class="snav"><a href="#Munich">Munich</a></li>
           </ul>
         </div>
       </div>
@@ -82,9 +83,22 @@
   <h2>Iceland</h2>
   <img src="images/Iceland1.jpg" height="300px" class="TextWrapLeft">
   <p>
-    Rebecca and I decided to take a day trip to Edinburgh. 
+    Sam Georgia and I decided to spend independent learning week in the beatuiful Iceland! 
   </p>
-</div>    
+</div>   
+</div>
+
+<div id="Munich">
+<div class="row">
+    <div class="col-sm-10">
+  <h2>Munich</h2>
+  <img src="images/Oktoberfest.jpg" height="300px" class="TextWrapLeft">
+  <p>
+    Kristen and I went to Oktoberfest in September. What a time! The beer, obviously, but the dancing, food and whole atmosphere are absolutely incredible! 
+  </p>
+   <img src="images/Okto2.jpg" height="300px" class="TextWrapLeft">
+  </div>
+  </div> 
 
   </body>
   </html>  
