I MADE THE NAV BAR GO RIGHT!

--- a/faraway.html
+++ b/faraway.html
@@ -22,23 +22,15 @@
 </div>
 
    <nav>
-      <div class=nav>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
+  
+  
           <ul class="sidenav">
             <li class="snav"><a href="#Edinburgh">Edinburgh</a></li>
             <li class="snav"><a href="#Skye">Isle of Skye</a></li>
             <li class="snav"><a href="#Iceland">Iceland</a></li>
             <li class="snav"><a href="#Munich">Munich</a></li>
           </ul>
-        </div>
-      </div>
+  
     </nav>
 
 <div id="Edinburgh">
@@ -83,7 +75,17 @@
   <h2>Iceland</h2>
   <img src="images/Iceland1.jpg" height="300px" class="TextWrapLeft">
   <p>
-    Sam Georgia and I decided to spend independent learning week in the beatuiful Iceland! 
+    Sam Georgia and I decided to spend independent learning week in the beatuiful Iceland! We stayed in Reykjavik and took daytrips around the southern part of the island. Should we go back, and should it be earlier in the season, we would love to explore up North, especially if it meant seeing the Northern Lights. 
+  </p>
+  <img src="images/hopra.jpg" height="300px" class="TextWrapRight">
+  <p>
+    The first day we exploted Reykjavik. After a yummy american breakfast we went to the Hoppra, an asbolutely stunning Opera house. Every corner of the building was interesting, with asymetric stairs, honeycomb windows and a warm feeling depsite the concrete flooring. We didn't catch a show but saw a spectacle none the less! After the opera house we went to the Reykjavik Art Museum which was hosting a very interactive modern art exhibit.  
+  </p>
+  <p>
+    On day two we travelled to Vik, up the east coast to see the legendary black sand beaches. Georgia and I took a fantastic horse back ride there. The icelandic ponies have a unique gait and are very short making for a special ride in addition to the beautiful landscape. We drove back towards Reykjavik stopping at Skogofoss, Iceland's best known waterfall. The fall itself was seeming with tourists but we were advised to hike past the falls for continued views and a more private experience. We hiked down the river about an hour, seeing many more waterfalls and taking in the brisk Icelandic weather. 
+  </p>
+  <p>
+    Our third day in Iceland was spent on the golden circle, the classic tourist route that is considered an absolute must do. OUr tour included visiting the techtanic plates in pingvallier national park, seeing a live geiser, and visiting the double waterfall gulfoss! 
   </p>
 </div>   
 </div>
