couple of spell checks on the faraway text

--- a/faraway.html
+++ b/faraway.html
@@ -63,7 +63,7 @@
 
   <img src="images/skye.jpg" height="300px" class="TextWrapLeft">
   <p>
-    Before our final year started Rebecca and I found it was high time we visited the beautiful Isle of Skye. Tjis was no simple feat as we decided to travel the 500 mile round trip jounrey by e-car. Feeling very environmentally friendly, we lapsed up the maginificence of Scotland bit by bit. HAving to stop every 90 miles encouraged us to explore towns we otherwise would not have such as Pitlochary, where we saw a massive dam, Fort William where we met nice fellow e-car drivers (though they had Teslas #dreamz). We also stopped off at the Harry Potter bridge,a s pictured! Almost hopped aboard the Hogwarts Express but the thought of seven more years of school, even wizard school, terrified us enough to continue our muggle lives. 
+    Before our final year started Rebecca and I found it was high time we visited the beautiful Isle of Skye. This was no simple feat as we decided to travel the 500 mile round trip jounrey by e-car. Feeling very environmentally friendly, we lapsed up the maginificence of Scotland bit by bit. HAving to stop every 90 miles encouraged us to explore towns we otherwise would not have such as Pitlochary, where we saw a massive dam, Fort William where we met nice fellow e-car drivers (though they had Teslas #dreamz). We also stopped off at the Harry Potter bridge, as pictured! Almost hopped aboard the Hogwarts Express but the thought of seven more years of school, even wizard school, terrified us enough to continue our muggle lives. 
   </p>
   <img src="images/skyefall.jpg" height="300px" class="TextWrapRight">
   <p>
