--- a/food.html
+++ b/food.html
@@ -19,17 +19,19 @@
 
 <div class='container'> 
 	<div class='row'>
-	<div class='col-sm-5'>
+	<div class='col-sm-9'>
 		<h2>Sausage and Fennel Pasta</h2>
-		<p>This was a great winter warmer from Jamie Oliver</p>
-	</div>
-	<div class='col-sm-4'>
-		<img src='http://www.johnsonville.com/recipe/zesty-italian-sausage-pasta/image/zestyItalianSausagePasta.jpg' width="200px" height="100px">
+		<p><img src='images/rjcooking.jpg' width="200px" height="100px" class="TextWrapRight">This one was a winter warmer from Jamie Oliver. Simple to make, yummy to eat, and according to the dashing Essex Chef, a ‘superfood’ meal – what’s not to love?<img src='images/sausagepasta.jpg' width="200px" height="100px" class="TextWrapLeft">It started with boiling some chipolata sausages, broccoli stalk and chili pepper for a few minutes. Then everything is fried off with onions, garlic, and fennel seeds and oregano. A can of tinned tomatoes was then added and everything bubbled away while we cooked the pasta. The broccoli florets were added to cook with the pasta in the last few minutes then everything was brought together in the pan. We ‘paired’ this dish with a wine from Tesco that was on special. It was a Californian red and the label recommended to drink it with meaty pasta, so it had to be. <img src='images/applesauce' width="200px" height="100px" class="TextWrapRight"> When we finished dinner, a cry of ‘I can make apple sauce!’ came from Nathalie. True to her word, twenty minutes later a delicious plate of apple sauce topped with a gingery-oat crumble, raspberry, and (not for Sam) a dollop of plain yoghurt arrived. The perfect light dessert for a hearty meal.
+		</p>
+
+		
+
+
 	</div>
 	<div class='col-sm-3'> 
  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScbzwjgK2Imc9PFhzB6_L_Kec13wXZrbAQMEUSboO1Cvx8NQQ/viewform?embedded=true" width="300" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</div>
-	</div>  
+	</div>
 
 <div class='container'> 
 	<div class='row'>
