Fixed food blog with wrapped text

--- a/food.html
+++ b/food.html
@@ -21,28 +21,24 @@
 	<div class='row'>
 	<div class='col-sm-9'>
 		<h2>Sausage and Fennel Pasta</h2>
-		<p><img src='images/rjcooking.jpg' width="200px" height="100px" class="TextWrapRight">This one was a winter warmer from Jamie Oliver. Simple to make, yummy to eat, and according to the dashing Essex Chef, a ‘superfood’ meal – what’s not to love?<img src='images/sausagepasta.jpg' width="200px" height="100px" class="TextWrapLeft">It started with boiling some chipolata sausages, broccoli stalk and chili pepper for a few minutes. Then everything is fried off with onions, garlic, and fennel seeds and oregano. A can of tinned tomatoes was then added and everything bubbled away while we cooked the pasta. The broccoli florets were added to cook with the pasta in the last few minutes then everything was brought together in the pan. We ‘paired’ this dish with a wine from Tesco that was on special. It was a Californian red and the label recommended to drink it with meaty pasta, so it had to be. <img src='images/applesauce' width="200px" height="100px" class="TextWrapRight"> When we finished dinner, a cry of ‘I can make apple sauce!’ came from Nathalie. True to her word, twenty minutes later a delicious plate of apple sauce topped with a gingery-oat crumble, raspberry, and (not for Sam) a dollop of plain yoghurt arrived. The perfect light dessert for a hearty meal.
+		<p><img src='images/rjcooking.jpg' width="200px" height="100px" class="TextWrapRight">This one was a winter warmer from Jamie Oliver. Simple to make, yummy to eat, and according to the dashing Essex Chef, a ‘superfood’ meal – what’s not to love?<img src='images/sausagepasta.jpg' width="200px" height="100px" class="TextWrapLeft">It started with boiling some chipolata sausages, broccoli stalk and chili pepper for a few minutes. Then everything is fried off with onions, garlic, and fennel seeds and oregano. A can of tinned tomatoes was then added and everything bubbled away while we cooked the pasta. The broccoli florets were added to cook with the pasta in the last few minutes then everything was brought together in the pan. We ‘paired’ this dish with a wine from Tesco that was on special. It was a Californian red and the label recommended to drink it with meaty pasta, so it had to be.<img src="images/applesauce.jpg" width="200px" height="100px" class="TextWrapRight">When we finished dinner, a cry of ‘I can make apple sauce!’ came from Nathalie. True to her word, twenty minutes later a delicious plate of apple sauce topped with a gingery-oat crumble, raspberry, and (not for Sam) a dollop of plain yoghurt arrived. The perfect light dessert for a hearty meal.
 		</p>
-
-		
+		<h2>Pesto Chicken and Veg</h2>
+		<p>Impromptu dinner parties are a favourite at 7D, and this meal was one of them. A last-minute throw together meal, inspired from what was in the 7D fridge and an Aldi run courtesy of an AU rental van.
+		</p>
+		<p>
+The conversation for this happened as follows:
+		</p>
+<img src='images/firsttext.png'  width="300px" id=firsttext> <img src='images/secondtext.png' width="300px" id=secondtext>
+		<p>
+Sam already had chicken and broccoli in the fridge, so Rebecca picked up some pesto, and ingredients for a light apple, pear, and avocado salad. The dressing was a mustard and balsamic number, which Laura even ventured to have! Major win.
+		</p>
 
 
 	</div>
 	<div class='col-sm-3'> 
  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScbzwjgK2Imc9PFhzB6_L_Kec13wXZrbAQMEUSboO1Cvx8NQQ/viewform?embedded=true" width="300" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</div>
-	</div>
-
-<div class='container'> 
-	<div class='row'>
-	<div class='col-sm-5'>
-		<h2>Pesto Chicken and Veg</h2>
-		<p>A last minute throw together meal, inspired from what was in the 7D fridge and an Aldi run.</p>
-	</div>
-	<div class='col-sm-4'>
-		<img src='images/IMG_0670.jpg' width="200px" height="100px">
-	</div>
-	<div class='col-sm-3'> 
 	</div>
 </div>
 
