--- a/food.html
+++ b/food.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
 </head>
 <body>
+<div class='siteheading'>
 <h1> <a href='index.html' class='sitelink'>7D Blog</a></h1>
 
 <ul class='topnav'>
@@ -16,8 +17,9 @@
     <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'>Far Away.</a></li></div>
 </div>
 </ul>
+</div>
 
-<div class='container'> 
+<div class='container content'> 
 	<div class='row'>
 	<div class='col-sm-9'>
 		<h2>Sausage and Fennel Pasta</h2>
