made Nav bar same across all pages

--- a/faraway.html
+++ b/faraway.html
@@ -8,14 +8,18 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-<h1><a href='index.html' class='sitelink'>7D Blog</a></h1>
+
+<div class='siteheading'>
+<h1> <a href='index.html' class='sitelink'><strong>7D Blog</strong></a></h1>
+
 <ul class='topnav'>
 <div class='container'>
-    <div class='col-sm-4'><li id="Food"> <a href='food.html' class='sitelink'>Food.</a></li></div>
-    <div class='col-sm-4'><li> <a href='friends.html' class='sitelink'>Friends.</a></li></div>
-    <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'>Far Away.</a></li></div>
+    <div class='col-sm-4'><li id="Food"> <a href='food.html' class='sitelink'><strong>Food.</strong></a></li></div>
+    <div class='col-sm-4'><li> <a href='friends.html' class='sitelink'><strong>Friends.</strong></a></li></div>
+    <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'><strong>Far Away.</strong></a></li></div>
 </div>
 </ul>
+</div>
 
    <nav>
       <div class=nav>
