--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-<h1><a href='index.html' class='sitelink'>7D Blog</a></h1>
+
+<div class='siteheading'>
+<h1> <a href='index.html' class='sitelink'><strong>7D Blog</strong></a></h1>
 
 <ul class='topnav'>
 <div class='container'>
-    <div class='col-sm-4'><li id="Food"> <a href='food.html' class='sitelink'>Food.</a></li></div>
-    <div class='col-sm-4'><li> <a href='friends.html' class='sitelink'>Friends.</a></li></div>
-    <div class='col-sm-4'><li> <a href='faraway.html' class='sitelink'>Far Away.</a></li></div>
+    <div class='col-sm-4'><li id="Food"> <a href='food.html' class='sitelink'><strong>Food.</strong></a></li></div>
+    <div class='col-sm-4'><li> <a href='friends.html' class='sitelink'><strong>Friends.</strong></a></li></div>
+    <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'><strong>Far Away.</strong></a></li></div>
 </div>
 </ul>
+</div>
 
  <img width="400px" height="300px" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/14322774_10210602320353438_8109989242671504453_n.jpg?oh=dd1b9c9fbf14f7c8e95bd61a8a862114&oe=588E4705" class="TextWrapRight">
 
