--- a/food.html
+++ b/food.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="food.css">
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 </head>
 <body>
 
