put font family dosis in all the htmls

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </title>
 <link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
 <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" type="text/css" href="home.css">
