--- a/faraway.html
+++ b/faraway.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="faraway.css">
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 </head>
 <body>
 
