--- a/friends.html
+++ b/friends.html
@@ -3,8 +3,8 @@
 	<title> 7D Friends </title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="friends.css">
-	<
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
   <link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
   <script src="jquery-3.1.1.min.js"></script>
 </head>
