fixing friends sitch

--- a/friends.html
+++ b/friends.html
@@ -24,19 +24,19 @@
 
 <div class="row">    
 <div class="col-sm-4" id="myModal" class="modal">
-  <img id= myImg src="images/Laura.jpg" alt="Info" width="300" height="200">
-
-   <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
-   <img class="modal-content" id="img01">
+  <img src="images/Laura.jpg">
   <h2>Laura</h2>
   <div id="caption">
-  	 "Happiness can be found, even in the darkest of times, if one only remembers to turn on the light"
+  <p class="imagetext">
+  	"Happiness can be found, even in the darkest of times, if one only remembers to turn on the light"
     Hometown: San Francisco
     Studying: International Relations and Management, 4th year
     Favorite 7D Activity: Going to sleep after a filling meal with friends
     Spirit Cocktail: Mimosa
     Dream Date: Going to a cozy cafe, with lots of cake, that I've never heard of before. 
     Dietary Requirements: I hate fish. They are gross. 
+  </p>
+  	
   </div>
   </div>
  
