--- a/food.html
+++ b/food.html
@@ -22,7 +22,51 @@
 </ul>
 </div>
 
-
+<div class='content'>
+<div class='container'>
+	<div class='row'>
+	<div class='col-sm-5'>
+	<h2>Sausage and Fennel Pasta</h2>
+		<p>
+		This one was a winter warmer from Jamie Oliver. Simple to make, yummy to eat, and according to the dashing Essex Chef, a ‘superfood’ meal – what’s not to love?
+		<br>
+		<br>
+		<br>
+		<br>
+		</p>
+	</div>
+	<div class='col-sm-4'>
+		<img src='images/rjcooking.jpg' width="250px" class='rotateimg90'>
+	</div>
+	<div class='col-sm-3'>
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScbzwjgK2Imc9PFhzB6_L_Kec13wXZrbAQMEUSboO1Cvx8NQQ/viewform?embedded=true" width="300" height="450" frameborder="0" marginheight="0" marginwidth="0" class="FixedRecipeForm">Loading...</iframe>
+	</div>
+	</div>
+	<div class='row'>
+	<div class='col-sm-4'>
+		<img src='images/sausagepasta.jpg' width="250px" class='rotateimg90'>
+	</div>
+	<div class='col-sm-5'>
+		<p>
+		It started with boiling some chipolata sausages, broccoli stalk and chili pepper for a few minutes. Then everything is fried off with onions, garlic, and fennel seeds and oregano. A can of tinned tomatoes was then added and everything bubbled away while we cooked the pasta. The broccoli florets were added to cook with the pasta in the last few minutes then everything was brought together in the pan. We ‘paired’ this dish with a wine from Tesco that was on special. It was a Californian red and the label recommended to drink it with meaty pasta, so it had to be.
+		</p>
+	</div>
+	</div>
+	<div class='row'>
+	<div class='col-sm-5'>
+		<p>
+		When we finished dinner, a cry of ‘I can make apple sauce!’ came from Nathalie. True to her word, twenty minutes later a delicious plate of apple sauce topped with a gingery-oat crumble, raspberry, and (not for Sam) a dollop of plain yoghurt arrived. The perfect light dessert for a hearty meal.
+		</p>
+	</div>
+	<div class='col-sm-4'>
+		<p>
+		When we finished dinner, a cry of ‘I can make apple sauce!’ came from Nathalie. True to her word, twenty minutes later a delicious plate of apple sauce topped with a gingery-oat crumble, raspberry, and (not for Sam) a dollop of plain yoghurt arrived. The perfect light dessert for a hearty meal.
+		</p>
+	</div>
+	</div>
+</div>
+</div>
+<!-- previous placing of photos without bootstrap
 <div class='container content'> 
 	<div class='row'>
 	<div class='col-sm-9'>
@@ -52,14 +96,14 @@ The conversation for this happened as follows:
 		<p>
 Sam already had chicken and broccoli in the fridge, so Rebecca picked up some pesto, and ingredients for a light apple, pear, and avocado salad. The dressing was a mustard and balsamic number, which Laura even ventured to have! Major win. 
 		</p>
-
-
 	</div>
+
 	<div class='col-sm-3'> 
  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScbzwjgK2Imc9PFhzB6_L_Kec13wXZrbAQMEUSboO1Cvx8NQQ/viewform?embedded=true" width="300" height="450" frameborder="0" marginheight="0" marginwidth="0" class="FixedRecipeForm">Loading...</iframe>
 	</div>
 	</div>
 </div>
+-->
 
 </body>
 </html>
